5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1578_2896.log
== TEST (2019-03-12 13:15:31) 
-- CODE:
# Use este codigo como ponto de partida
print("GILIAN")
# Leitura de valores de entrada
var = input("GILIAN: gil")

# Impressao de saidas
print(var)
-- OUTPUT:
GILIAN
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:16:34) 
-- CODE:
# Use este codigo como ponto de partida
print("GILIAN")
# Leitura de valores de entrada
var = input("NOME: gilian")

# Impressao de saidas
print(var)
-- OUTPUT:
GILIAN
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:16:50) 
-- CODE:
# Use este codigo como ponto de partida
print("GILIAN")
# Leitura de valores de entrada
var = input("NOME: gilian")

# Impressao de saidas
print(GILIAN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(GILIAN)
NameError: name 'GILIAN' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:43:03) 
-- CODE:
# Use este codigo como ponto de partida
python
# Leitura de valores de entrada
var = input("python: ")

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    python
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:43:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:45:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:46:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.136355
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:10:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.123269
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
